--- a/css/theme.css
+++ b/css/theme.css
@@ -35,6 +35,10 @@ body {
 .btn-danger,.label-danger,.progress-bar-danger{background-color:#dd4b39;}
 .btn-warning,.label-warning,.progress-bar-warning{background-color:#f4b400;color:#444444;}
 
+.progress{height:4px;margin-top:16px;margin-bottom:16px;}
+
+.label{display:inline-flex;padding:.2em .6em .3em;font-size:75%;font-weight:bold;line-height:1;color:#fff;text-align:center;white-space:nowrap;vertical-align:baseline;border-radius:.25em}
+
 hr {border-color:#ececec;}
 
 button {
@@ -91,18 +95,20 @@ h3,h4,h5 {
    border-radius:0;
    margin-top:-1px;
 }
+
+a.blacklink:link, a.blacklink:visited, a.blacklink:hover, a.blacklink:active {color: #000000;}
 /* end theme styles */
 
 
 /* template layout */
 #subnav {
 	position:fixed;
-  width:100%;
+    width:100%;
 }
 
 @media (max-width: 768px) {
 	#subnav {
-	padding-top: 6px;
+	 padding-top: 6px;
 	}
 }
 
