entry became ticket

--- a/css/site.css
+++ b/css/site.css
@@ -109,7 +109,7 @@ footer {
     width: 15%;
     display: inline-block;
   }
-  .entry {
+  .ticket {
     float: left;
     clear: none;
     display: inline-block;
